--- a/index.html
+++ b/index.html
@@ -1,3 +1,248 @@
-$ git config --global user.name "laetitiamichel"
-$ git config --global user.email laetitia.michel@devoteam.com
-https://github.com/laetitiamichel/security_home.git
+<!DOCTYPE html>
+<html lang="fr">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="portfolio Laetitia MICHEL">
+
+    <link rel="apple-touch-icon" sizes="180x180" href="./favicon/logo http/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./favicon/logo http/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./favicon/logo http/favicon-16x16.png">
+    <link rel="manifest" href="./favicon/logo http/site.webmanifest">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+    <link rel='stylesheet' href='https://static.fontawesome.com/css/fontawesome-app.css'>
+    <link rel='stylesheet' href='https://pro.fontawesome.com/releases/v5.9.0/css/all.css'>
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400&amp;display=swap'>
+
+    <link rel="stylesheet" href="./css/menuburger.css">
+    <link rel="stylesheet" href="./css/darkmode.css">
+    <link rel="stylesheet" href="./css/reseauxSociaux.css">
+    <link rel="stylesheet" href="./css/projets.css">
+    <link rel="stylesheet" href="./css/presentation.css">
+    <link rel="stylesheet" href="./css/3d.css">
+    <link rel="stylesheet" href="./css/carrousel.css">
+    <link rel="stylesheet" href="./css/main.css">
+
+
+    <title>Portfolio</title>
+</head>
+
+<!-- THEME -->
+
+<body>
+    <!-- PAGE ACCUEIL -->
+    <div class="mask" role="region">
+        <header class="page_de_gauche">
+            <h1>Laëtitia MICHEL
+                <!-- bouton dark mode -->
+                <button aria-label="light mode" class="light-mode">
+                    <span class="material-symbols-outlined">
+                        flare
+                    </span>
+                </button>
+            </h1>
+            <h2>Portfolio développeur</h2>
+            <!-- bouton réseaux sociaux -->
+            <ul class="reseaux-sociaux">
+                <!-- INSTAGRAM -->
+                <li>
+                    <a href="https://www.instagram.com/ruegabrielle_/" target="blank">
+                        <img src="./asset/insta/instagram_black_logo_icon_147122.svg" alt="Instagram Logo">
+                    </a>
+                </li>
+                <!-- LINKEDIN -->
+                <li>
+                    <a href="https://www.linkedin.com/in/laetitia-michel-/" target="blank">
+                        <img src="./asset/linkedin/linkedin_black_logo_icon_147114.svg" alt="Linkedin logo">
+                    </a>
+                </li>
+                <!-- EMAIL -->
+                <li>
+                    <a href="mailto:laetitia26.michel@gmail.com" target="blank">
+                        <img src="./asset/mail/telegram_black_logo_icon_147073.svg" alt="mail logo">
+                    </a>
+                </li>
+            </ul>
+            </h2>
+        </header>
+
+        <!-- PAGE ACCUEIL DE DROITE  -->
+        <nav class="page_de_droite">
+            <!-- image BG -->
+            <div class="imageFond" role="region">
+                <img src="./asset/bride edito Paris_cleya asulon-3917.jpg" alt="imageFondDroite">
+            </div>
+            <!-- MENU BURGER -->
+            <div class="hamburger-menu" role="group">
+                <input id="menu__toggle" type="checkbox" />
+                <label class="menu__btn" for="menu__toggle">
+                    <span class="material-symbols-outlined"></span>
+                </label>
+                <ul class="menu__box">
+                    <li><a class="menu__item" href="#presentation-primary">Présentation</a></li>
+                    <li><a class="menu__item" href="#projets-primary">Projets</a></li>
+                    <li><a class="menu__item" href="#entreprise">Entreprise</a></li>
+                    <li><a class="menu__item" href="#veilleTechnologique">Veille Technologique</a></li>
+                </ul>
+            </div>
+        </nav>
+    </div>
+    <!-- end module one -->
+
+
+    <!-- PRESENTATION -->
+    <!-- PAGE DE GAUCHE PRESENTATION -->
+    <div class="mask" role="region">
+        <h3 class="presentation-primary" id="presentation-primary">Présentation</h3>
+        <nav class="droite-presentation">
+            <div class="imageFond">
+                <img src="./asset/presentation/presentation-boutique.jpg" alt="imageFondDroite">
+            </div>
+        </nav>
+
+        <!-- PAGE DE DROITE PRESENTATION  -->
+
+        <div class="gauche-presentation">
+            <p class="texte-presentation">
+                <img id="logo-2007" src="./asset/presentation/2007.svg" alt="logo-2007">
+
+                <br><br>Diplôme Universitaire de Podologie <br><br>
+                Institut des Hôpitaux de Toulouse Purpan<br><br><br><br><br>
+
+                <img src="./asset/presentation/2011.svg" alt="logo-2011">
+
+                <br><br>Visuel merchandiser<br><br>
+                Kookaï<br><br><br><br>
+
+                <img src="./asset/presentation/2016.svg" alt="logo-2016">
+
+                <br><br>Ouverture concept store paris 11e <br><br>
+                Création site internet (eshop)<br><br>
+                Gestion d'employés et de stagiaires<br><br><br><br>
+
+
+                <img src="./asset/presentation/2017.svg" alt="">
+
+                <br><br>Création de marque Rue Gabrielle<br>
+                Conception de bijoux en laiton plaqué Or<br>
+                Veille concurencielle<br>
+                Prospection Nationale<br>
+                Gestion des réseaux sociaux<br><br><br><br>
+
+                <img src="./asset/presentation/2022.svg">
+
+                <br><br>Consultante technique Service Now<br><br>
+                Devoteam<br><br>
+                Implémentation de solutions digitales<br><br>
+                EDF, QUALICONSULT<br><br><br><br>
+            </p>
+        </div>
+    </div>
+    <!-- end module two -->
+    <!-- FIN PAGE PRESENTATION  -->
+
+    <!-- PROJETS -->
+    <div class="projet-primary" role="region">
+        <h3 class="projets-primary" id="projets-primary">Projets</h3>
+
+        <div class="carousel">
+            <div class="carousel__body">
+
+
+                <div class="carousel__slider">
+
+                    <div class="carousel__slider__item">
+                        <div class="item__3d-frame">
+                            <div class="item__3d-frame__box item__3d-frame__box--front">
+                                <img src="./asset/bride edito Paris_cleya asulon-3917.jpg" id="projet_1">
+                            </div>
+                            <div class="item__3d-frame__box item__3d-frame__box--left"></div>
+                            <div class="item__3d-frame__box item__3d-frame__box--right"></div>
+                        </div>
+                    </div>
+
+                    <div class="carousel__slider__item">
+                        <div class="item__3d-frame">
+                            <div class="item__3d-frame__box item__3d-frame__box--front">
+                                <h1><img src="./asset/chartre_typo.png" id="projet_2"></h1>
+                            </div>
+                            <div class="item__3d-frame__box item__3d-frame__box--left"></div>
+                            <div class="item__3d-frame__box item__3d-frame__box--right"></div>
+                        </div>
+                    </div>
+                    <div class="carousel__slider__item">
+                        <div class="item__3d-frame">
+                            <div class="item__3d-frame__box item__3d-frame__box--front">
+                                <h1><img src="./asset/glooMaps.png" id="projet_3"></h1>
+                            </div>
+                            <div class="item__3d-frame__box item__3d-frame__box--left"></div>
+                            <div class="item__3d-frame__box item__3d-frame__box--right"></div>
+                        </div>
+                    </div>
+
+                    <div class="carousel__slider__item">
+                        <div class="item__3d-frame">
+                            <div class="item__3d-frame__box item__3d-frame__box--front">
+                                <img src="./asset/bride edito Paris_cleya asulon-3917.jpg">
+                            </div>
+                            <div class="item__3d-frame__box item__3d-frame__box--left"></div>
+                            <div class="item__3d-frame__box item__3d-frame__box--right"></div>
+                        </div>
+                    </div>
+
+                    <div class="carousel__slider__item">
+                        <div class="item__3d-frame">
+                            <div class="item__3d-frame__box item__3d-frame__box--front">
+                                <img src="./asset/chartreGraphique.png">
+                            </div>
+                            <div class="item__3d-frame__box item__3d-frame__box--left"></div>
+                            <div class="item__3d-frame__box item__3d-frame__box--right"></div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+            <div class="btnCarousel">
+                <div class="carousel__prev">
+                    <i class="far fa-angle-left">
+                    </i>
+                </div>
+                <div class="carousel__next">
+                    <i class="far fa-angle-right">
+
+                    </i>
+                </div>
+            </div>
+        </div>
+    </div>
+    <br>
+    <main>
+    
+</main> 
+    <!-- ENTREPRISE -->
+
+    <!-- VEILLE TECHNOLOGIQUE -->
+
+
+<footer>
+    <div class="containCube">
+        <div class="cube" role="group">
+            <div class="cubeGroup cube-front cube-1"><img src="./favicon/android-chrome-512x512.png"></div>
+            <div class="cubeGroup cube-top cube-2"><img src="./asset/presentation/file_type_css_icon_130661.svg"></div>
+            <div class="cubeGroup cube-left cube-3"><img src="./asset/presentation/DevoteamLogo.jpg"></div>
+            <div class="cubeGroup cube-right cube-4"><img src="./asset/presentation/jsIcone.svg"></div>
+            <div class="cubeGroup cube-rear cube-5"><img src="./asset/presentation/ServiceNow_newlogo_200x200.svg"></div>
+            <div class="cubeGroup cube-bottom cube-6"><img src="./asset/presentation/htmlIcone.svg"></div>
+        </div>
+    </div> 
+</footer>
+    <script src="./js/carrousel.js"></script>
+    <script src="./js/app.js"></script>
+
+</body>
+
+</html>
