--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="./css/main.css">
 
 
-    <title>Security</title>
+    <title>Security_home</title>
 </head>
 
 <!-- THEME -->
