--- a/index.html
+++ b/index.html
@@ -6,18 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="portfolio Laetitia MICHEL">
 
-    <link rel="apple-touch-icon" sizes="180x180" href="./favicon/logo http/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="./favicon/logo http/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="./favicon/logo http/favicon-16x16.png">
-    <link rel="manifest" href="./favicon/logo http/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="./favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="./favicon_io/site.webmanifest">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-    <link rel='stylesheet' href='https://static.fontawesome.com/css/fontawesome-app.css'>
-    <link rel='stylesheet' href='https://pro.fontawesome.com/releases/v5.9.0/css/all.css'>
-    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400&amp;display=swap'>
-
+    
     
     <link rel="stylesheet" href="./css/menu_head.css">
     <link rel="stylesheet" href="./css/main.css">
