--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                     <img src="./asset/secOps/Security_incident_response.png" class="img card"></img>
                   </div>
                   <div class="card-back">
-                    <p>L'informatique</p>
+                    <p>Everything about Security Incident Response</p>
                   </div>
                 </div>
             </div>
@@ -154,7 +154,8 @@
                     <img src="./asset/secOps/threat_intelligence.png" class="img card"></img>
                   </div>
                   <div class="card-back">
-                    <p>La sécurité</p>
+                    <p>Everything about Threat
+                      Intelligence</p>
                   </div>
                 </div>
             </div>
@@ -164,7 +165,7 @@
                     <img src="./asset/secOps/vulnerability_responce.png" class="img card"></img>
                   </div>
                   <div class="card-back">
-                    <p>Prestation de service RH</p>
+                    <p>Everything about Vulnerability Response</p>
                   </div>
                 </div>
             </div>
@@ -174,7 +175,7 @@
                     <img src="./asset/secOps/config_compliance.png" class="img card"></img>
                   </div>
                   <div class="card-back">
-                    <p>Le service client</p>
+                    <p>Everything about Configuration Compliance</p>
                   </div>
                 </div>
             </div>
