création des différentes pages / href menu home

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="portfolio Laetitia MICHEL">
+    <meta name="description" content="security secOps and Irm">
 
     <link rel="apple-touch-icon" sizes="180x180" href="./favicon_io/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./favicon_io/favicon-32x32.png">
@@ -30,21 +30,21 @@
             
             <!-- Menu normal -->
             <ul class="menu">
-              <li><a>Home</a>
+              <li><a href="index.html">Home</a>
               </li><li><a>SecOps</a>
                 <ul class="submenu two">
-                  <li><a>Security Incident Response</a></li>
-                  <li><a>Threat Intelligence</a></li>
-                  <li><a>Vulnerability Response</a></li>
-                  <li><a>Configuration Compliance</a></li>
+                  <li><a href="page_sir.html">Security Incident Response</a></li>
+                  <li><a href="page_threat_intelligence.html">Threat Intelligence</a></li>
+                  <li><a href="page_vulnerability_response.html">Vulnerability Response</a></li>
+                  <li><a href="page_config_compliance.html">Configuration Compliance</a></li>
                 </ul>
               </li><li><a>IRM</a>
                 <ul class="submenu three">
-                  <li><a>Policy & Compliance Management</a></li>
-                  <li><a>Third Party Risk Management</a></li>
-                  <li><a>Business Continuity Management</a></li>
+                  <li><a href="page_policy.html">Policy & Compliance Management</a></li>
+                  <li><a href="page_third_party.html">Third Party Risk Management</a></li>
+                  <li><a href="page_business_management.html">Business Continuity Management</a></li>
                 </ul>
-              </li><li><a>Our Tools</a>
+              </li><li><a href="page_tools.html">Our Tools</a>
                 <ul class="submenu four">
                   <li><a>Knowledge base</a></li>
                   <li><a>Gemini Gems</a></li>
