--- a/index.html
+++ b/index.html
@@ -33,22 +33,22 @@
               <li><a href="index.html">Home</a>
               </li><li><a>SecOps</a>
                 <ul class="submenu two">
-                  <li><a href="page_sir.html">Security Incident Response</a></li>
-                  <li><a href="page_threat_intelligence.html">Threat Intelligence</a></li>
-                  <li><a href="page_vulnerability_response.html">Vulnerability Response</a></li>
-                  <li><a href="page_config_compliance.html">Configuration Compliance</a></li>
+                  <li><a href="pages_secops/page_sir.html">Security Incident Response</a></li>
+                  <li><a href="pages_secops/page_threat_intelligence.html">Threat Intelligence</a></li>
+                  <li><a href="pages_secops/page_vulnerability_response.html">Vulnerability Response</a></li>
+                  <li><a href="pages_secops/page_config_compliance.html">Configuration Compliance</a></li>
                 </ul>
               </li><li><a>IRM</a>
                 <ul class="submenu three">
-                  <li><a href="page_policy.html">Policy & Compliance Management</a></li>
-                  <li><a href="page_third_party.html">Third Party Risk Management</a></li>
-                  <li><a href="page_business_management.html">Business Continuity Management</a></li>
+                  <li><a href="pages_irm/page_policy.html">Policy & Compliance Management</a></li>
+                  <li><a href="pages_irm/page_third_party.html">Third Party Risk Management</a></li>
+                  <li><a href="pages_irm/page_business_management.html">Business Continuity Management</a></li>
                 </ul>
-              </li><li><a href="page_tools.html">Our Tools</a>
+              </li><li><a >Our Tools</a>
                 <ul class="submenu four">
-                  <li><a>Knowledge base</a></li>
-                  <li><a>Gemini Gems</a></li>
-                  <li><a>Templates</a></li>
+                  <li><a href="page_tools/page_knowledgeBase.html">Knowledge base</a></li>
+                  <li><a href="page_tools/page_gemini.html">Gemini Gems</a></li>
+                  <li><a href="page_tools/page_templates.html">Templates</a></li>
                 </ul>
               </li><li><a>Contacts</a>
                 <!-- <ul class="submenu five">
@@ -188,9 +188,8 @@
 <footer>
     
 </footer>
-    <script src="./js/carrousel.js"></script>
-    <script src="./js/app.js"></script>
-
+    <script src="./js/menu.js"></script>
+    
 </body>
 
 </html>
