--- a/index.html
+++ b/index.html
@@ -119,18 +119,18 @@
            
         </div>
         <div class="security_presentation"> 
-            Our team is a dedicated group of ServiceNow specialist consultants, 
+            <p>Our team is a dedicated group of ServiceNow specialist consultants, 
             equipped with a diverse skill set encompassing developers, process specialists, 
             and industry knowledge. 
-            We have a particular focus and in-depth expertise in:
+            We have a particular focus and in-depth expertise in:</p>
             <ul class="u_presentation">
                 <li class="li_presentation"><span class="red-text">the Security Operations (SecOps)</span> module,</li> 
                 <li class="li_presentation">including Security Incident Response (<span class="red-text">SIR</span>)</li> 
                 <li class="li_presentation">and Vulnerability Response (<span class="red-text">VR</span>), </li> 
                 <li class="li_presentation">as well as the Integrated Risk Management(<span class="red-text">IRM</span>) module. </li> 
             </ul>
-            Our combined knowledge and experience enable us to provide comprehensive 
-             and tailored ServiceNow solutions to our clients, helping them<span class="red-text">streamline their security and compliance processes</span>.    
+            <p> Our combined knowledge and experience enable us to provide comprehensive 
+            and tailored ServiceNow solutions to our clients, helping them<span class="red-text">streamline their security and compliance processes.</span></p>   
     </div>
         
             <h3 class="bandeau_h3" > SecOps </h3>
