template card knowledge

--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
                 </ul>
               </li><li><a >Our Tools</a>
                 <ul class="submenu four">
-                  <li><a href="page_tools/page_knowledgeBase.html">Knowledge base</a></li>
-                  <li><a href="page_tools/page_gemini.html">Gemini Gems</a></li>
-                  <li><a href="page_tools/page_templates.html">Templates</a></li>
+                  <li><a href="tools_knowledgeBase.html">Knowledge base</a></li>
+                  <li><a href=".html">Gemini Gems</a></li>
+                  <li><a href=".html">Templates</a></li>
                 </ul>
               </li><li><a>Contacts</a>
                 <!-- <ul class="submenu five">
