--- a/tools_knowledgeBase.html
+++ b/tools_knowledgeBase.html
@@ -93,14 +93,65 @@
         <h3 class="bandeau_h3" > Knowledge Base</h3>
  <!-- template card knowledge -->       
 <div class="knowledge">
-    <h4 class="h4_knowledge">Generating Sheduled Email Notifications</h4>
-    <p>The customer wants weekly email notifications to be sent to teams listing 
-    the tasks that they have in progress in their queue.</p>
-    <a  class="more_information" href="https://docs.google.com/document/d/1xSFGLW3CmMvP5Kl0wcq90RwoVvKI4seY_WuiN7zXtIk/edit?tab=t.0#heading=h.9v6sbpqrx7u3" 
-    target="_blank" alt="more information">more information</a>
-  
+    <div class="knowledge_card">
+        <h4 class="h4_knowledge">Generating Sheduled Email Notifications</h4>
+            <p class="p_knowledge">The customer wants weekly email notifications to be sent to teams listing 
+                the tasks that they have in progress in their queue.</p>
+                <a  class="more_information" href="https://docs.google.com/document/d/1xSFGLW3CmMvP5Kl0wcq90RwoVvKI4seY_WuiN7zXtIk/edit?tab=t.0#heading=h.9v6sbpqrx7u3" 
+                    target="_blank" alt="more information">more information</a> 
+    </div>
+    <div class="knowledge_card">
+        <h4 class="h4_knowledge">Check Object relations for clean up</h4>
+            <p class="p_knowledge">As part of a clean up activity, the customer needed to delete any CIs that had no 
+                INC/CHG/PRB/SIR/VR etc… related to it.
+            </p>
+                <a  class="more_information" href="https://docs.google.com/document/d/1_Be2ehvSRXRi1CzcIgsPdcHcjWlyiyM-CVmONKBmyLY/edit?tab=t.0#heading=h.9v6sbpqrx7u3" 
+                    target="_blank" alt="more information">more information</a> 
+    </div>
+    <div class="knowledge_card">
+        <h4 class="h4_knowledge">Import records via catalog item</h4>
+            <p class="p_knowledge">The customer needed an easy way to import vulnerable items manually as a result of pentesting. 
+            </p>
+                <a  class="more_information" href="https://docs.google.com/document/d/1hX_jRzhnE4QAB9FKX_LGuH7S9TTTFhnKjtwsicZ72Ds/edit?tab=t.0#heading=h.9v6sbpqrx7u3" 
+                    target="_blank" alt="more information">more information</a> 
+    </div>
+    <div class="knowledge_card">
+        <h4 class="h4_knowledge">Check Object relations for clean up</h4>
+            <p class="p_knowledge">As part of a clean up activity, the customer needed to delete any 
+                CIs that had no INC/CHG/PRB/SIR/VR etc… related to it.
+            </p>
+                <a  class="more_information" href="https://docs.google.com/document/d/1_Be2ehvSRXRi1CzcIgsPdcHcjWlyiyM-CVmONKBmyLY/edit?tab=t.0#heading=h.9v6sbpqrx7u3" 
+                    target="_blank" alt="more information">more information</a> 
+    </div>
+    <div class="knowledge_card">
+        <h4 class="h4_knowledge">Establishing a REST API to retrieve User Informations</h4>
+            <p class="p_knowledge">The client wants a mechanism to check if the user is existing on the 
+                ServiceNow CMDB with API.
+            </p>
+                <a  class="more_information" href="https://docs.google.com/document/d/1TFLRlXHt3gyuu0-Aq9z2kextvDKkC0VYt52zrG0UtHg/edit?tab=t.0#heading=h.ly6b47h4wqlw" 
+                    target="_blank" alt="more information">more information</a> 
+    </div>
+    <div class="knowledge_card">
+        <h4 class="h4_knowledge">MITRE ATT&CK Integration and scripts</h4>
+            <p class="p_knowledge">This article explains MITRE ATT&CK's significance, its function in SIR
+                 forms, and methods for modifying scripts to optimize its use within ServiceNow. 
+            </p>
+                <a  class="more_information" href="https://docs.google.com/document/d/1vzpOYWozn4SMf5Pzh_P35NGwgCluslNZyNWWDxhPxhI/edit?tab=t.0" 
+                    target="_blank" alt="more information">more information</a> 
+    </div>
+    <div class="knowledge_card">
+        <h4 class="h4_knowledge">Enhancing ServiceNow SecOps SIR with Adaptive Card Integration</h4>
+            <p class="p_knowledge">This article guides SecOps consultants on customizing and implementing
+                 Adaptive Cards in ServiceNow SecOps SIR for streamlined incident response and improved collaboration. 
+            </p>
+                <a  class="more_information" href="https://docs.google.com/document/d/14EFUjCO0RZmXtIjDOTAcSwMWcijrDUFg0T5Emt3tLzo/edit?tab=t.0" 
+                    target="_blank" alt="more information">more information</a> 
+    </div>
 </div>
-<!-- template card knowledge --> 
+<!-- template card knowledge -->
+<div class="knowledge">
+    
+</div> 
 </main>           
 </body>
 </html>
