--- a/secops_sir.html
+++ b/secops_sir.html
@@ -52,7 +52,7 @@
                     <li><a>Gemini Gems</a></li>
                     <li><a>Templates</a></li>
                   </ul>
-                </li><li><a>Contacts</a>
+                </li><li><a href="contacts.html">Contacts</a>
                   <!-- <ul class="submenu five">
                     <li><a>Contact me</a></li>
                     <li><a>About me</a></li>
@@ -113,5 +113,10 @@
       
   </main>           
 
+  <footer>
+    
+  </footer>
+      <script src="./js/menu.js"></script>
+      <script src="./js/cards.js"></script>
   </body>
   </html>
