--- a/tools_knowledgeBase.html
+++ b/tools_knowledgeBase.html
@@ -50,7 +50,7 @@
                   <li><a href="tools_gemini.html">SN Community feeds</a></li>
                   <li><a href="tools_templates.html">SN Webinars</a></li>
                 </ul>
-              </li><li><a>Contacts</a>
+              </li><li><a href="contacts.html">Contacts</a>
                 <!-- <ul class="submenu five">
                   <li><a>Contact me</a></li>
                   <li><a>About me</a></li>
@@ -91,7 +91,7 @@
           </nav> <!-- Fin menu general (nav) -->
         </header>
         <h3 class="bandeau_h3" > Knowledge Base</h3>
- <!-- template card knowledge -->       
+<!-- template card knowledge -->       
 <div class="knowledge">
     <div class="knowledge_card">
         <h4 class="h4_knowledge">Generating Sheduled Email Notifications</h4>
@@ -153,5 +153,10 @@
     
 </div> 
 </main>           
+<footer>
+    
+</footer>
+    <script src="./js/menu.js"></script>
+    <script src="./js/cards.js"></script>
 </body>
 </html>
