--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                   <li><a href=".html">Gemini Gems</a></li>
                   <li><a href=".html">Templates</a></li>
                 </ul>
-              </li><li><a>Contacts</a>
+              </li><li><a href="contacts.html">Contacts</a>
                 <!-- <ul class="submenu five">
                   <li><a>Contact me</a></li>
                   <li><a>About me</a></li>
