--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <main class="container">
         <header>
           <nav class="navbar-menu">
-            
+            <img src="./asset/devoteam-logo.png" class="logo_devoteam"></img>
             <!-- Menu normal -->
             <ul class="menu">
               <li><a href="index.html">Home</a>
