template page contacts

--- a/index.html
+++ b/index.html
@@ -29,16 +29,16 @@
     <main class="container">
         <header>
           <nav class="navbar-menu">
-            <img src="./asset/devoteam-logo.png" class="logo_devoteam"></img>
+            <!-- <img src="./asset/devoteam-logo.png" class="logo_devoteam"></img> -->
             <!-- Menu normal -->
             <ul class="menu">
               <li><a href="index.html">Home</a>
               </li><li><a>SecOps</a>
                 <ul class="submenu two">
-                  <li><a href="secops_sir.html">Security Incident Response</a></li>
-                  <li><a href="secops_threat_intelligence.html">Threat Intelligence</a></li>
-                  <li><a href="secops_vulnerability_response.html">Vulnerability Response</a></li>
-                  <li><a href="secops_config_compliance.html">Configuration Compliance</a></li>
+                  <li><a href="./pages_secops/secops_sir.html">Security Incident Response</a></li>
+                  <li><a href="./pages_secops/secops_threat_intelligence.html">Threat Intelligence</a></li>
+                  <li><a href="./pages_secops/secops_vulnerability_response.html">Vulnerability Response</a></li>
+                  <li><a href="./pages_secops/secops_config_compliance.html">Configuration Compliance</a></li>
                 </ul>
               </li><li><a>IRM</a>
                 <ul class="submenu three">
