--- a/pages_secops/secops_sir.html
+++ b/pages_secops/secops_sir.html
@@ -12,8 +12,8 @@
       <link rel="manifest" href="./favicon_io/site.webmanifest">
       <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
       
-      <link rel="stylesheet" href="./css/main.css">
-      <link rel="stylesheet" href="./css/menu_head.css">
+      <link rel="stylesheet" href="../css/main.css">
+      <link rel="stylesheet" href="../css/menu_head.css">
       
 
 
