--- a/pages_secops/secops_threat_intelligence.html
+++ b/pages_secops/secops_threat_intelligence.html
@@ -13,8 +13,8 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
     
     
-    <link rel="stylesheet" href="./css/menu_head.css">
-    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="../css/menu_head.css">
 
 
     <title>Security_home</title>
