--- a/index.html
+++ b/index.html
@@ -915,7 +915,7 @@
         <div class="footer-logo">
           <a class="footer-logo-link" href="#">
             <span class="hidden-link-text">LOGO</span>
-            <h1>SECURITY</h1>
+            <h2>SECURITY</h2>
           </a>
         </div>
         <div class="footer-menu">
@@ -1028,7 +1028,7 @@
     <div class="footer-copyright">
       <div class="footer-copyright-wrapper">
         <p class="footer-copyright-text">
-          <a class="footer-copyright-link" href="#" target="_self"> ©2020. | Designed By: Pooja Nahelia. | All rights reserved. </a>
+          <a class="footer-copyright-link" href="#" target="_self"> ©2020. |  | All rights reserved. </a>
         </p>
       </div>
     </div>
