--- a/pages_secops/secops_threat_intelligence.html
+++ b/pages_secops/secops_threat_intelligence.html
@@ -195,7 +195,7 @@
               <label class="item" for="t-4">
                   <div class="mycard" id="projet_4">
                       <div>
-                          <img src="../asset/secOps/threat_1.png" alt="nivel5" class="cardimg" />
+                          <img src="../asset/secOps/vulnerability_2.webp" alt="nivel5" class="cardimg" />
                           <p class="carddescription">Projet Ligues</p>
                       </div>
                       <div>
@@ -205,7 +205,7 @@
               <label class="item" for="t-5">
                   <div class="mycard" id="projet_5">
                       <div>
-                          <img src="./asset/projets/projet_3_display.png" alt="nivel5" class="cardimg" />
+                          <img src="../asset/secOps/sir_3.png" alt="nivel5" class="cardimg" />
                           <p class="carddescription">Projet Display</p>
                       </div>
                       <div>       
@@ -309,7 +309,7 @@
           <div class="footer-call-to-action">
             <h2 class="footer-call-to-action-title"> Contact US</h2>
             <p class="footer-call-to-action-description"> Have a support question?</p>
-            <a class="footer-call-to-action-button button" href="#" target="_self"> Get in Touch </a>
+            <a class="footer-call-to-action-button button" href="../contacts.html" target="_self"> Get in Touch </a>
           </div>
          
       
