--- a/pages_secops/secops_sir.html
+++ b/pages_secops/secops_sir.html
@@ -170,7 +170,7 @@
               <label class="item" for="t-1">
                   <div class="mycard" id="projet_1">
                       <div>
-                          <img src="../asset/secOps/sir.png" alt="nivel5" class="cardimg" />
+                          <img src="../asset/secOps/irm_1.jpg" alt="nivel5" class="cardimg" />
                           <p class="carddescription">Projet Batman</p>
                       </div>
                   <div>
@@ -201,7 +201,7 @@
               <label class="item" for="t-4">
                   <div class="mycard" id="projet_4">
                       <div>
-                          <img src="../asset/secOps/sir.png" alt="nivel5" class="cardimg" />
+                          <img src="../asset/secOps/sir_3.png" alt="nivel5" class="cardimg" />
                           <p class="carddescription">Projet Ligues</p>
                       </div>
                       <div>
@@ -211,7 +211,7 @@
               <label class="item" for="t-5">
                   <div class="mycard" id="projet_5">
                       <div>
-                          <img src="./asset/projets/projet_3_display.png" alt="nivel5" class="cardimg" />
+                          <img src=".;/" alt="nivel5" class="cardimg" />
                           <p class="carddescription">Projet Display</p>
                       </div>
                       <div>       
@@ -315,7 +315,7 @@
           <div class="footer-call-to-action">
             <h2 class="footer-call-to-action-title"> Contact US</h2>
             <p class="footer-call-to-action-description"> Have a support question?</p>
-            <a class="footer-call-to-action-button button" href="#" target="_self"> Get in Touch </a>
+            <a class="footer-call-to-action-button button" href="../contacts.html" target="_self"> Get in Touch </a>
           </div>
          
       
