--- a/page_tools/tools_knowledgeBase.html
+++ b/page_tools/tools_knowledgeBase.html
@@ -30,12 +30,12 @@
             
             <!-- Menu normal -->
             <ul class="menu">
-              <li><a href="index.html">Home</a>
+              <li><a href="../index.html">Home</a>
               </li><li><a>Our Tools</a>
                 <ul class="submenu two">
-                    <li><a href="tools_knowledgeBase.html">Knowledge base</a></li>
-                    <li><a href="tools_gemini.html">Gemini Gems</a></li>
-                    <li><a href="tools_templates.html">Templates</a></li>
+                    <li><a href="../page_tools/tools_knowledgeBase.html">Knowledge base</a></li>
+                    <li><a href="../page_tools/tools_gemini.html">Gemini Gems</a></li>
+                    <li><a href="../page_tools/tools_templates.html">Templates</a></li>
                 </ul>
               </li><li><a>3rd Party Tools</a>
                 <ul class="submenu three">
@@ -49,7 +49,7 @@
                   <li><a href="tools_gemini.html">SN Community feeds</a></li>
                   <li><a href="tools_templates.html">SN Webinars</a></li>
                 </ul>
-              </li><li><a href="contacts.html">Contacts</a>
+              </li><li><a href="../contacts.html">Contacts</a>
                 <!-- <ul class="submenu five">
                   <li><a>Contact me</a></li>
                   <li><a>About me</a></li>
