--- a/pages_secops/secops_sir.html
+++ b/pages_secops/secops_sir.html
@@ -51,11 +51,11 @@
                     <li><a href="">KNOWLEDGE BASE</a></li>
                     <li><a href="">INTEGRATION</a></li>
                   </ul>
-                </li><li><a href="../page_tools/tools_knowledgeBase.html">Our Tools</a>
+                </li><li><a >Our Tools</a>
                   <ul class="submenu four">
-                    <li><a>Knowledge base</a></li>
-                    <li><a>Gemini Gems</a></li>
-                    <li><a>Templates</a></li>
+                    <li><a href="../page_tools/tools_knowledgeBase.html">Knowledge base</a></li>
+                    <li><a href="../page_tools/tools_gemini.html">Gemini Gems</a></li>
+                    <li><a href="../page_tools/tools_templates.html">Templates</a></li>
                   </ul>
                 </li><li><a href="../contacts.html">Contacts</a>
                   <!-- <ul class="submenu five">
