--- a/contacts.html
+++ b/contacts.html
@@ -241,7 +241,7 @@
         </div>
 				<div class="card-profile">
 					<div class="profile-image">
-            <img src="./asset/contacts/axelLejeune.png">
+            <img src="./asset/contacts/Axel LEJEUNE.jpg">
 					</div>
 				</div>
 				<div class="card-info">
