--- a/contacts.html
+++ b/contacts.html
@@ -274,7 +274,7 @@
         </div>
 				<div class="card-profile">
 					<div class="profile-image">
-            <img src="./asset/contacts/HadrienMoreau.png">
+            <img src="./asset/contacts/Hadrien Moreau.webp">
 					</div>
 				</div>
 				<div class="card-info">
@@ -307,7 +307,7 @@
         </div>
 				<div class="card-profile">
 					<div class="profile-image">
-            <img src="./asset/contacts/IklefMallem.png">
+            <img src="./asset/contacts/Iklef MALLEM.jpg">
 					</div>
 				</div>
 				<div class="card-info">
@@ -379,7 +379,7 @@
         </div>
 				<div class="card-profile">
 					<div class="profile-image">
-            <img src="./asset/contacts/MaïmounaKante.png">
+            <img src="./asset/contacts/Maïmouna Kanté.jpg">
 					</div>
 				</div>
 				<div class="card-info">
