--- a/contacts.html
+++ b/contacts.html
@@ -169,6 +169,101 @@
 	<div class="display">
 		<div class="display-item">
       <!-- start card -->
+      <div class="card seamus">
+				<div class="card-top">
+        </div>
+				<div class="card-profile">
+					<div class="profile-image">
+            <img src="./asset/contacts/StephaneBILONG.png">
+					</div>
+				</div>
+				<div class="card-info">
+					<div class="info-title">
+						<h2>Stephane BILONG</h2>
+						<h3>Technical Consultant</h3>
+					</div>
+					<div class="info-bio">Certified: SIR / VR
+                                Experienced: 
+                                Interested: 
+                                stephane.bilong@devoteam.com
+					</div>
+					<div class="info-social">
+						<div class="social-icons">
+							<button onclick="window.location.href='mailto:stephane.bilong@devoteam.com'">
+                <span class="btn-content">
+                    <img class="mail-icon" src="./asset/contacts/envelope_message_mail_email_icon_258918.svg" alt="Email">
+                    <span class="hover-text">Contactez-moi</span>
+                </span>
+              </button>
+						</div>
+					</div>
+				</div>
+			</div>
+      <!-- end card -->
+      <!-- start card -->
+      <div class="card seamus">
+				<div class="card-top">
+        </div>
+				<div class="card-profile">
+					<div class="profile-image">
+            <img src="./asset/contacts/FatimazohraSAMRAN.jpg">
+					</div>
+				</div>
+				<div class="card-info">
+					<div class="info-title">
+						<h2>Fatima zohra SAMRAN</h2>
+						<h3>Technical Consultant</h3>
+					</div>
+					<div class="info-bio">Certified: SIR / VR
+                                Experienced: 
+                                Interested: 
+                                fatima.samran@devoteam.com
+					</div>
+					<div class="info-social">
+						<div class="social-icons">
+							<button onclick="window.location.href='mailto:fatima.samran@devoteam.com'">
+                <span class="btn-content">
+                    <img class="mail-icon" src="./asset/contacts/envelope_message_mail_email_icon_258918.svg" alt="Email">
+                    <span class="hover-text">Contactez-moi</span>
+                </span>
+              </button>
+						</div>
+					</div>
+				</div>
+			</div>
+      <!-- end card -->
+       <!-- start card -->
+      <div class="card seamus">
+				<div class="card-top">
+        </div>
+				<div class="card-profile">
+					<div class="profile-image">
+            <img src="./asset/contacts/laetitiaMichel.webp">
+					</div>
+				</div>
+				<div class="card-info">
+					<div class="info-title">
+						<h2>Laëtitia MICHEL</h2>
+						<h3>Technical Consultant</h3>
+					</div>
+					<div class="info-bio">Certified: CSA /CAD
+                                Experienced: SIR
+                                Interested: SIR
+                                laetitia.michel@devoteam.com
+					</div>
+					<div class="info-social">
+						<div class="social-icons">
+							<button onclick="window.location.href='mailto:laetitia.michel@devoteam.com'">
+                <span class="btn-content">
+                    <img class="mail-icon" src="./asset/contacts/envelope_message_mail_email_icon_258918.svg" alt="Email">
+                    <span class="hover-text">Contactez-moi</span>
+                </span>
+              </button>
+						</div>
+					</div>
+				</div>
+			</div>
+      <!-- end card -->
 			<div class="card seamus">
 				<div class="card-top">
         </div>
@@ -395,6 +490,72 @@
 					<div class="info-social">
 						<div class="social-icons">
 							<button onclick="window.location.href='mailto:maimouna.kante@devoteam.com'">
+                <span class="btn-content">
+                    <img class="mail-icon" src="./asset/contacts/envelope_message_mail_email_icon_258918.svg" alt="Email">
+                    <span class="hover-text">Contactez-moi</span>
+                </span>
+              </button>
+						</div>
+					</div>
+				</div>
+			</div>
+      <!-- end card -->
+       <!-- start card -->
+			<div class="card seamus">
+				<div class="card-top">
+      
+        </div>
+				<div class="card-profile">
+					<div class="profile-image">
+            <img src="">
+					</div>
+				</div>
+				<div class="card-info">
+					<div class="info-title">
+						<h2>Robin DEPARPE</h2>
+						<h3>Technical Consultant</h3>
+					</div>
+					<div class="info-bio">Certified: 
+                                Experienced: 
+                                Interested: 
+                                robin.deparpe@devoteam.com
+					</div>
+					<div class="info-social">
+						<div class="social-icons">
+							<button onclick="window.location.href='mailto:robin.deparpe@devoteam.com'">
+                <span class="btn-content">
+                    <img class="mail-icon" src="./asset/contacts/envelope_message_mail_email_icon_258918.svg" alt="Email">
+                    <span class="hover-text">Contactez-moi</span>
+                </span>
+              </button>
+						</div>
+					</div>
+				</div>
+			</div>
+      <!-- end card -->
+       <!-- start card -->
+			<div class="card seamus">
+				<div class="card-top">
+      
+        </div>
+				<div class="card-profile">
+					<div class="profile-image">
+            <img src="">
+					</div>
+				</div>
+				<div class="card-info">
+					<div class="info-title">
+						<h2>Nadia Hamdaoui</h2>
+						<h3>Technical Consultant</h3>
+					</div>
+					<div class="info-bio">Certified: 
+                                Experienced: 
+                                Interested: 
+                                nadia.hamdaoui@devoteam.com
+					</div>
+					<div class="info-social">
+						<div class="social-icons">
+							<button onclick="window.location.href='mailto:nadia.hamdaoui@devoteam.com'">
                 <span class="btn-content">
                     <img class="mail-icon" src="./asset/contacts/envelope_message_mail_email_icon_258918.svg" alt="Email">
                     <span class="hover-text">Contactez-moi</span>
