--- a/contacts.html
+++ b/contacts.html
@@ -269,7 +269,7 @@
         </div>
 				<div class="card-profile">
 					<div class="profile-image">
-            <img src="./asset/contacts/HuachenZhang.png">
+            <img src="./asset/contacts/HuachenZhang.webp">
 					</div>
 				</div>
 				<div class="card-info">
