--- a/contacts.html
+++ b/contacts.html
@@ -216,9 +216,9 @@
 						      <h2>Fatima zohra SAMRAN</h2>
 						      <h3>Technical Consultant</h3>
 					      </div>
-                  <div class="info-bio">Certified: SIR / VR
-                                        Experienced: 
-                                        Interested: 
+                  <div class="info-bio">Certified: CSA / CAD / ITSM / SIR / VR / RC / TPRM / EM / HR
+                                        Experienced: ITSM / SIR 
+                                        Interested: SIR / VR / RC / TPRM
                                         fatima.samran@devoteam.com
                   </div>
                     <div class="info-social">
@@ -348,7 +348,7 @@
                 <h2>Axel LEJEUNE</h2>
                 <h3>Technical Consultant</h3>
               </div>
-                <div class="info-bio">Certified:
+                <div class="info-bio">Certified: CSA / ITL 4 
                                       Experienced: 
                                       Interested:
                                       axel.lejeune@devoteam.com
@@ -381,7 +381,7 @@
                 <h2>Hadrien MOREAU</h2>
                 <h3>Technical Consultant</h3>
               </div>
-                <div class="info-bio">Certified:
+                <div class="info-bio">Certified: CSA / ITIL 4 / VR / APM
                                       Experienced: 
                                       Interested: 
                                       hadrien.moreau@devoteam.com
@@ -414,7 +414,7 @@
                 <h2>Iklef MALLEM</h2>
                 <h3>Technical Consultant</h3>
               </div>
-                <div class="info-bio">Certified:
+                <div class="info-bio">Certified: CSA / ITOM / ITSM / PPM / HR
                                       Experienced:
                                       Interested: 
                                       iklef.mallem@devoteam.com
@@ -619,7 +619,7 @@
                 <h2>Richard KOHLER</h2>
                 <h3>Senior Technical Consultant</h3>
               </div>
-                <div class="info-bio">Certified: 
+                <div class="info-bio">Certified: CSA / CAD / SIR 
                                       Experienced: 
                                       Interested: 
                                       richard.kohler@devoteam.com
