MAJ contacts + CSS menu

--- a/contacts.html
+++ b/contacts.html
@@ -346,11 +346,11 @@
             <div class="card-info">
               <div class="info-title">
                 <h2>Axel LEJEUNE</h2>
-                <h3>Technical Consultant</h3>
+                <h3>Administrateur fontionnel</h3>
               </div>
                 <div class="info-bio">Certified: CSA / ITL 4 
-                                      Experienced: 
-                                      Interested:
+                                      Experienced: Functionnal Administrator and Performance Analytic Specialist
+                                      Interested: SecOps, IA
                                       axel.lejeune@devoteam.com
                 </div>
                   <div class="info-social">
