--- a/pages_secops/secops_sir.html
+++ b/pages_secops/secops_sir.html
@@ -160,7 +160,7 @@
                   <div class="mycard" id="projet_1">
                       <div>
                           <img src="../asset/SIR/SIR_tables.png" alt="nivel5" class="cardimg" />
-                          <p class="carddescription">SIR component</p>
+                          <!-- <p class="carddescription">SIR component</p> -->
                       </div>
                   <div>
                  
@@ -171,7 +171,7 @@
                   <div class="mycard" id="projet_2">
                       <div>
                           <img src="../asset/SIR/SIR_maturityLevel.png" alt="nivel5" class="cardimg" />
-                          <p class="carddescription">Projet PHP</p>
+                          <!-- <p class="carddescription">Projet PHP</p> -->
                       </div>
                   <div>       
                       </div>
@@ -181,7 +181,7 @@
                   <div class="mycard" id="projet_3">
                       <div>
                           <img src="../asset/SIR/SIR_component.png" alt="nivel5" class="cardimg" />
-                          <p class="carddescription">Projet gmail</p>
+                          <!-- <p class="carddescription">Projet gmail</p> -->
                       </div>
                       <div>
                       </div>
@@ -191,7 +191,7 @@
                   <div class="mycard" id="projet_4">
                       <div>
                           <img src="../asset/SIR/SIR_personas.png" alt="nivel5" class="cardimg" />
-                          <p class="carddescription">Projet Ligues</p>
+                          <!-- <p class="carddescription">Projet Ligues</p> -->
                       </div>
                       <div>
                       </div>
@@ -201,7 +201,7 @@
                   <div class="mycard" id="projet_5">
                       <div>
                           <img src="../asset/SIR/SIR_roles.png" alt="nivel5" class="cardimg" />
-                          <p class="carddescription">Projet Display</p>
+                          <!-- <p class="carddescription">Projet Display</p> -->
                       </div>
                       <div>       
                       </div>
